[package]
name = "nftscape"
version = "1.0.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "NFT client"
repository = "https://github.com/mattsse/nftscape"
 

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13.0"
futures = "0.3.16"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json", "stream", "multipart"] }
anyhow = "1.0.42"
tokio = { version = "1.9.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
thiserror = "1.0.26"
slug = "0.1.4"
log = "0.4.14"
url = "2.2.2"
serde_repr = "0.1.7"

[dev-dependencies]
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }


[features]
rarible = []
